--- a/CatchMe/Views/Tasks/TaskDetails.cshtml
+++ b/CatchMe/Views/Tasks/TaskDetails.cshtml
@@ -43,11 +43,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.creator)
+            @Html.DisplayNameFor(model => model.user.fullname)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.creator)
+            @Html.DisplayFor(model => model.user.fullname)
         </dd>
 
         <dt>
