--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -32,11 +32,11 @@
         <th>
             @Html.DisplayNameFor(model => model.title)
         </th>
-        <th>
+        <th style="width:20%">
             @Html.DisplayNameFor(model => model.description)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.initiator)
+            Initiator
         </th>
         <th>
             @Html.DisplayNameFor(model => model.priority)
@@ -44,9 +44,7 @@
         <th>
             @Html.DisplayNameFor(model => model.due_date)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.project.name)
-        </th>
+        
         <th></th>
     </tr>
 
@@ -55,7 +53,7 @@
         <td>
             
 
-            <span class="label label-@(item.StatusDescLabel)">@Html.DisplayFor(modelItem => item.StatusDesc)</span>
+            <div class="status label label-@(item.StatusDescLabel)">@Html.DisplayFor(modelItem => item.StatusDesc)</div>
 
         </td>
         <td>
@@ -79,13 +77,11 @@
         <td>
             @Html.DisplayFor(modelItem => item.due_date)
         </td>
+        
         <td>
-            @Html.DisplayFor(modelItem => item.project.name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "EditTask", new { id=item.task_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.task_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.task_id })
+            <a href="@Url.Action("EditTask", new {  id = item.task_id})"><span class="fa fa-edit"></span> </a>
+            <a href="@Url.Action("DeleteTask", new {  id = item.task_id})"><span class="fa fa-trash"></span> </a>
+            
         </td>
     </tr>
 }
