--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -21,15 +21,25 @@
                 <input type="hidden" name="project_id" value="@session.Current.CurrentProjectId" />
                 <div class="form-group">
                     @Html.LabelFor(model => model.project_id, "project_id", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         <input type="text" value="@session.Current.CurrentProject" readonly class="form-control" />
 
                     </div>
                 </div>
 
                 <div class="form-group">
+                    @Html.LabelFor(model => model.type, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-6">
+
+                        @Html.DropDownList("type", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.type, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+                <div class="form-group">
                     @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         
                         @Html.DropDownList("status", null, new { @class = "form-control"  })                        
                         @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
@@ -38,7 +48,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.test_status, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         
                         @Html.DropDownList("test_status", null,  new { @class = "form-control" } )
                         @Html.ValidationMessageFor(model => model.test_status, "", new { @class = "text-danger" })
@@ -47,7 +57,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.title, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         @Html.EditorFor(model => model.title, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
                     </div>
@@ -55,7 +65,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         @Html.TextAreaFor(model => model.description, new { @class = "form-control" } )
                         @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                     </div>
@@ -63,7 +73,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.initiator, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         @Html.EditorFor(model => model.initiator, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.initiator, "", new { @class = "text-danger" })
                     </div>
@@ -71,7 +81,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.complexity, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         @Html.DropDownList("complexity", null,  new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.complexity, "", new { @class = "text-danger" })
                     </div>
@@ -81,7 +91,7 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.priority, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         @Html.DropDownList("priority", null, new { @class = "form-control" } )
                         @Html.ValidationMessageFor(model => model.complexity, "", new { @class = "text-danger" })
                     </div>
@@ -89,14 +99,14 @@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.due_date, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-6">
                         @Html.EditorFor(model => model.due_date, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.due_date, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-offset-2 col-md-6">
                         <input type="submit" value="Create" class="btn btn-default" />
                     </div>
                 </div>
