--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -44,5 +44,11 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/custom")
     @RenderSection("scripts", required: false)
+
+    <script type="text/javascript">    
+            bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });
+    
+    </script>
+
 </body>
 </html>
