--- a/CatchMe/Views/Admin/FindUser.cshtml
+++ b/CatchMe/Views/Admin/FindUser.cshtml
@@ -27,7 +27,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-4">
                 @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" , placeholder="mcb username e.g abcdef"} })
                 @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
             </div>
@@ -35,8 +35,8 @@
 
         
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-4">
+                <input type="submit" value="Find User" class="btn btn-default" />
             </div>
         </div>
     </div>
