--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -27,6 +27,18 @@
                     </div>
                 </div>
 
+
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-6">
+
+                        <input type="hidden" name="status" value="0" readonly />
+                        <input class="form-control" value="New" readonly />
+                        @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.type, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
@@ -37,23 +49,26 @@
                 </div>
 
 
-                <div class="form-group">
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
-                        
+                    <div class="col-md-6">                        
                         @Html.DropDownList("status", null, new { @class = "form-control"  })                        
                         @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
-                <div class="form-group">
+
+
+
+
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.test_status, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-6">
                         
                         @Html.DropDownList("test_status", null,  new { @class = "form-control" } )
                         @Html.ValidationMessageFor(model => model.test_status, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.title, htmlAttributes: new { @class = "control-label col-md-2" })
